<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geografia</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kontinenty">Kontinenty</string>
    <string name="Europa">Európa</string>
    <string name="title_activity_kontinent_detail">KontinentDetailActivity</string>
    <string name="txtPocStatov">Počet štátov:</string>
    <string name="txtKontinent">Kontinent:</string>
    <string name="txtPocUzemi">Počet území:</string>
    <string name="txtRozloha">Rozloha:</string>
    <string name="txtPopulacia">Populácia:</string>
    <string name="btnPrehladStatov">Prehľad štátov</string>
    <string name="title_activity_otazka">Kvíz na hlavné mestá</string>
    <string name="btnDoMenu">Naspäť do menu</string>
    <string name="btnPotvrd">Potvrď</string>
    <string name="title_activity_stat">Štáty</string>
    <string name="txtHl_mesto">Hlavné mesto:</string>
    <string name="txtZnameMesta">Známe mestá:</string>
    <string name="txtJazyk">Úradný jazyk:</string>
    <string name="txtMena">Mena:</string>
    <string name="txtStat">Štát:</string>
    <string name="title_activity_activity_stat_detail">StatDetailActivity</string>
    <string name="otazkaVyhodnotenie">otazka</string>
    <string name="btnNaspat">späť</string>
    <string name="txtSkore">100%</string>
    <string name="txtVyhodnotenie">Vyhodnotenie kvízu</string>
    <string name="btnOPrograme">O programe</string>

</resources>
