<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="durnek.bakalarka.geography.fragments.KontinentDetailFragment"
    android:orientation="vertical"
    android:background="@drawable/pozadie">

    <TextView
            android:id="@+id/nazov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txtKontinent"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:textColor="@color/primary_dark_material_dark" />

        <TextView
            android:id="@+id/pocStatov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txtPocStatov"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/pocUzemi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txtPocUzemi"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/rozloha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txtRozloha"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/populacia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txtPopulacia"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:paddingTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPrehladStatov"
        android:id="@+id/btnPrehlad"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
